--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </div>
 
 
-<div class="footer">
+<footer>
     <p>Search the country, get the info </Search></p>
-</div>
+</footer>
 
 <script src="script.js"></script>
 </body>
